; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/oprofile/extr_op_model_cell.c_cell_global_start.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/oprofile/extr_op_model_cell.c_cell_global_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.op_counter_config = type { i32 }

@profiling_mode = common dso_local global i64 0, align 8
@SPU_PROFILING_CYCLES = common dso_local global i64 0, align 8
@SPU_PROFILING_EVENTS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.op_counter_config*)* @cell_global_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cell_global_start(%struct.op_counter_config* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.op_counter_config*, align 8
  store %struct.op_counter_config* %0, %struct.op_counter_config** %3, align 8
  %4 = load i64, i64* @profiling_mode, align 8
  %5 = load i64, i64* @SPU_PROFILING_CYCLES, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.op_counter_config*, %struct.op_counter_config** %3, align 8
  %9 = call i32 @cell_global_start_spu_cycles(%struct.op_counter_config* %8)
  store i32 %9, i32* %2, align 4
  br label %20

10:                                               ; preds = %1
  %11 = load i64, i64* @profiling_mode, align 8
  %12 = load i64, i64* @SPU_PROFILING_EVENTS, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %10
  %15 = load %struct.op_counter_config*, %struct.op_counter_config** %3, align 8
  %16 = call i32 @cell_global_start_spu_events(%struct.op_counter_config* %15)
  store i32 %16, i32* %2, align 4
  br label %20

17:                                               ; preds = %10
  %18 = load %struct.op_counter_config*, %struct.op_counter_config** %3, align 8
  %19 = call i32 @cell_global_start_ppu(%struct.op_counter_config* %18)
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %17, %14, %7
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @cell_global_start_spu_cycles(%struct.op_counter_config*) #1

declare dso_local i32 @cell_global_start_spu_events(%struct.op_counter_config*) #1

declare dso_local i32 @cell_global_start_ppu(%struct.op_counter_config*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
